--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 Chapter 1 | [The Difference of var, let and const](javascript/var-let-const.html)
                 Chapter 2 | [How to Equal](javascript/how-to-equal.html)
                 Chapter 3 | [Quotation mark](javascript/quotation-mark.html)
+                Chapter 4 | [Syntactic Sugar](javascript/syntactic-sugar.html)
             </section>
         </section>
         <section>
