--- a/javascript/for-in-for-of.html
+++ b/javascript/for-in-for-of.html
@@ -24,7 +24,7 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-markdown="md/syntactic-sugar-2.md"
+        <section data-markdown="md/for-in-for-of.md"
                  data-separator="^\n---\n"
                  data-separator-vertical="^\n--\n"
                  data-separator-notes="^Note:"
