add for in and for of

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 Chapter 2 | [How to Equal](javascript/how-to-equal.html)
                 Chapter 3 | [Quotation mark](javascript/quotation-mark.html)
                 Chapter 4 | [Syntactic Sugar](javascript/syntactic-sugar.html)
+                Chapter 5 | [for...in... and for...of...](javascript/for-in-for-of.html)
             </section>
         </section>
         <section>
