--- a/javascript/for-in-for-of.html
+++ b/javascript/for-in-for-of.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Syntactic Sugar of JavaScript</title>
+    <title>for...in... and for...of...</title>
 
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/league.css">
