--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <section><h1>Javascript</h1></section>
             <section data-markdown>
-                ## Chapters
+                ## Chapters Part 1
 
                 Chapter | Title
                 --- | ---
@@ -43,6 +43,13 @@
                 Chapter 3 | [Quotation mark](javascript/quotation-mark.html)
                 Chapter 4 | [Syntactic Sugar](javascript/syntactic-sugar.html)
                 Chapter 5 | [for...in... and for...of...](javascript/for-in-for-of.html)
+            </section>
+            <section data-markdown>
+                ## Chapters Part 2
+
+                Chapter | Title
+                --- | ---
+                Chapter 6 | [Callback to Promise to Async/Await](javascript/callback-promise-async-await.html)
             </section>
         </section>
         <section>
