--- a/javascript/callback-promise-async-await.html
+++ b/javascript/callback-promise-async-await.html
@@ -6,11 +6,12 @@
 
     <title>Callback to Promise to Async/Await</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
-    <link id="theme" rel="stylesheet" href="../revealjs/css/theme/moon.css">
+    <link id="theme" rel="stylesheet" href="../revealjs/css/theme/simple.css">
 
     <!-- Theme used for syntax highlighting of code -->
-    <link rel="stylesheet" href="../revealjs/plugin/highlight/styles/dracula.css">
+    <link rel="stylesheet" href="../revealjs/plugin/highlight/styles/ocean.css">
 
     <!-- Printing and PDF exports -->
     <script>
