--- a/javascript/syntactic-sugar.html
+++ b/javascript/syntactic-sugar.html
@@ -6,6 +6,7 @@
 
     <title>Syntactic Sugar of JavaScript</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/simple.css">
 
