--- a/http/access-control.html
+++ b/http/access-control.html
@@ -6,6 +6,7 @@
 
     <title>HTTP Access Control(CORS)</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/blood.css">
 
