--- a/http/compression.html
+++ b/http/compression.html
@@ -6,6 +6,7 @@
 
     <title>HTTP Compression</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/night.css">
 
