--- a/http/cookies.html
+++ b/http/cookies.html
@@ -6,6 +6,7 @@
 
     <title>HTTP Cookies</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/white.css">
 
