--- a/http/request-header.html
+++ b/http/request-header.html
@@ -6,6 +6,7 @@
 
     <title>HTTP Request Header</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/solarized.css">
 
