--- a/javascript/for-in-for-of.html
+++ b/javascript/for-in-for-of.html
@@ -6,6 +6,7 @@
 
     <title>for...in... and for...of...</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/league.css">
 
