--- a/javascript/how-to-equal.html
+++ b/javascript/how-to-equal.html
@@ -6,6 +6,7 @@
 
     <title>How to Equal</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/beige.css">
 
