--- a/javascript/quotation-mark.html
+++ b/javascript/quotation-mark.html
@@ -6,6 +6,7 @@
 
     <title>Quotation Mark of String in JavaScript</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/moon.css">
 
