--- a/javascript/var-let-const.html
+++ b/javascript/var-let-const.html
@@ -6,6 +6,7 @@
 
     <title>The Difference of var, let and const</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/black.css">
 
