--- a/redis/intro.html
+++ b/redis/intro.html
@@ -6,6 +6,7 @@
 
     <title>Redis Intro</title>
 
+    <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/black.css">
 
