--- a/http/compression.html
+++ b/http/compression.html
@@ -26,8 +26,8 @@
 <div class="reveal">
     <div class="slides">
         <section data-markdown="md/compression.md"
-                 data-separator="^\n---\n"
-                 data-separator-vertical="^\n--\n"
+                 data-separator="^\r?\n---\r?\n$"
+                 data-separator-vertical="^\r?\n--\r?\n$"
                  data-separator-notes="^Note:"
                  data-charset="utf-8">
         </section>
