add new chapters

--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
                 Chapter | Title
                 --- | ---
                 Chapter 1 | [Project Lombok](java/lombok.html)
+                Chapter 2 | [Java 8 Features](java/java-8-features.html)
+            </section>
+        </section>
+        <section>
+            <section><h1>C++</h1></section>
+        </section>
+        <section>
+            <section><h1>Java V.S. C++</h1></section>
+            <section data-markdown>
+                ## Chapters
+
+                Chapter | Title
+                --- | ---
+                Chapter 1 | [Java Basic V.S. C++ Basic](java-vs-cpp/java-basic-vs-cpp-basic.html)
+                Chapter 2 | [Java Collections V.S. C++ STL](java-vs-cpp/java-collections-vs-cpp-stl.html)
+                Chapter 3 | [Java OOP V.S. C++ OOP](java-vs-cpp/java-oop-vs-cpp-opp.html)
+                Chapter 4 | [Java I/O V.S. C++ I/O](java-vs-cpp/java-io-vs-cpp-io.html)
+                Chapter 5 | [Java Exception V.S. C++ Exception](java-vs-cpp/java-exception-vs-cpp-exception.html)
+                Chapter 6 | [Java Memory V.S. C++ Memory](java-vs-cpp/java-memory-vs-cpp-memory.html)
             </section>
         </section>
         <section>
