--- a/java-vs-cpp/java-collections-vs-cpp-stl.html
+++ b/java-vs-cpp/java-collections-vs-cpp-stl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>reveal.js</title>
+    <title>Java Collections V.S. C++ STL</title>
 
     <link rel="shortcut icon" href="shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
@@ -25,7 +25,7 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-markdown="md/xxx.md"
+        <section data-markdown="md/java-collections-vs-cpp-stl.md"
                  data-separator="^\r?\n---\r?\n$"
                  data-separator-vertical="^\r?\n--\r?\n$"
                  data-separator-notes="^Note:"
