--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
                 Chapter 1 | [The Difference of Merge and Rebase](git/merge-and-rebase.html)
             </section>
         </section>
+        <section>
+            <section><h1>Coding</h1></section>
+            <section data-markdown>
+                ## Chapters
+
+                Chapter | Title
+                --- | ---
+                Chapter 1 | [Good Code](coding/good-code.html)
+            </section>
+        </section>
     </div>
 </div>
 
